--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -79,11 +79,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d67653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_interaction_file(\n",
+    "    logs_root: str,\n",
+    "    seed_folder: str,\n",
+    "    epoch: int,\n",
+    "    split: str = \"validation\",\n",
+    "    prefix: str = \"interaction_gpu0\"\n",
+    ") -> object:\n",
+    "    \"\"\"\n",
+    "    Load the interaction file for a specified epoch.\n",
+    "    \"\"\"\n",
+    "    epoch_folder = f\"epoch_{epoch}\"\n",
+    "    pattern = os.path.join(\n",
+    "        logs_root,\n",
+    "        seed_folder,\n",
+    "        \"interactions\",\n",
+    "        split,\n",
+    "        epoch_folder,\n",
+    "        f\"{prefix}*\"\n",
+    "    )\n",
+    "\n",
+    "    files = glob.glob(pattern)\n",
+    "    if not files:\n",
+    "        raise FileNotFoundError(f\"No files matching {pattern}\")\n",
+    "\n",
+    "    if len(files) > 1:\n",
+    "        # If multiple files match, sort alphabetically and pick the first\n",
+    "        files = sorted(files)\n",
+    "\n",
+    "    selected_file = files[0]\n",
+    "    print(f\"Loading interaction file: {selected_file}\")\n",
+    "\n",
+    "    return torch.load(selected_file, map_location=\"cpu\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2743e59f",
    "metadata": {},
    "source": [
     "# Bee Language Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "267e494b",
+   "metadata": {},
+   "source": [
+    "## Correlation Analysis"
    ]
   },
   {
@@ -93,12 +142,219 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bee_interaction_obj = load_latest_interaction_file(\n",
+    "bee_interaction_42 = load_interaction_file(\n",
     "    logs_root=\"../logs/interactions/2025-07-02\",\n",
     "    seed_folder=\"gamesize10_bee_gs_seed42\",\n",
+    "    epoch=26,\n",
+    "    split=\"validation\",\n",
+    "    prefix=\"interaction_gpu0\"\n",
+    ")\n",
+    "bee_interaction_27 = load_interaction_file(\n",
+    "    logs_root=\"../logs/interactions/2025-07-02\",\n",
+    "    seed_folder=\"gamesize10_bee_gs_seed27\",\n",
+    "    epoch=30,\n",
+    "    split=\"validation\",\n",
+    "    prefix=\"interaction_gpu0\"\n",
+    ")\n",
+    "bee_interaction_31 = load_interaction_file(\n",
+    "    logs_root=\"../logs/interactions/2025-07-02\",\n",
+    "    seed_folder=\"gamesize10_bee_gs_seed31\",\n",
+    "    epoch=40,\n",
+    "    split=\"validation\",\n",
+    "    prefix=\"interaction_gpu0\"\n",
+    ")\n",
+    "bee_interaction_2025 = load_interaction_file(\n",
+    "    logs_root=\"../logs/interactions/2025-07-02\",\n",
+    "    seed_folder=\"gamesize10_bee_gs_seed2025\",\n",
+    "    epoch=26,\n",
+    "    split=\"validation\",\n",
+    "    prefix=\"interaction_gpu0\"\n",
+    ")\n",
+    "bee_interaction_123 = load_interaction_file(\n",
+    "    logs_root=\"../logs/interactions/2025-07-02\",\n",
+    "    seed_folder=\"gamesize10_bee_gs_seed123\",\n",
+    "    epoch=14,\n",
     "    split=\"validation\",\n",
     "    prefix=\"interaction_gpu0\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c667e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bee_interactions = [\n",
+    "    (\"seed42\", bee_interaction_42),\n",
+    "    (\"seed27\", bee_interaction_27),\n",
+    "    (\"seed31\", bee_interaction_31),\n",
+    "    (\"seed123\", bee_interaction_123),\n",
+    "    (\"seed2025\", bee_interaction_2025),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9c287c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "plt.rcParams.update({\n",
+    "    \"font.size\": 16,\n",
+    "    \"axes.titlesize\": 16,\n",
+    "    \"axes.labelsize\": 16,\n",
+    "    \"xtick.labelsize\": 16,\n",
+    "    \"ytick.labelsize\": 16,\n",
+    "    \"legend.fontsize\": 16,\n",
+    "})\n",
+    "\n",
+    "def extract_distances(interaction_obj):\n",
+    "    message = interaction_obj.message\n",
+    "    distance_token = message[:, 8].cpu().numpy()\n",
+    "    semantic_distances = []\n",
+    "    graph_counter = 0\n",
+    "    for data_batch in interaction_obj.aux_input['data']:\n",
+    "        graphs_in_batch = data_batch.ptr.size(0) - 1\n",
+    "        for j in range(graphs_in_batch):\n",
+    "            nest_global = int(interaction_obj.aux_input['nest_idx'][graph_counter + j])\n",
+    "            food_global = int(interaction_obj.aux_input['food_idx'][graph_counter + j])\n",
+    "            start_index  = int(data_batch.ptr[j])\n",
+    "            nest_local   = nest_global - start_index\n",
+    "            food_local   = food_global - start_index\n",
+    "            dx, dy = (data_batch.pos[food_local] - data_batch.pos[nest_local]).cpu().numpy()\n",
+    "            semantic_distances.append(np.hypot(dx, dy))\n",
+    "        graph_counter += graphs_in_batch\n",
+    "    true_distances = np.array(semantic_distances)\n",
+    "    return true_distances, distance_token\n",
+    "\n",
+    "def extract_directions(interaction_obj):\n",
+    "    message = interaction_obj.message\n",
+    "    predicted_direction = message[:, :8].argmax(dim=1).cpu().numpy()\n",
+    "    semantic_dirs = []\n",
+    "    graph_counter = 0\n",
+    "    for data_batch in interaction_obj.aux_input['data']:\n",
+    "        graphs_in_batch = data_batch.ptr.size(0) - 1\n",
+    "        for j in range(graphs_in_batch):\n",
+    "            nest_global = int(interaction_obj.aux_input['nest_idx'][graph_counter + j])\n",
+    "            food_global = int(interaction_obj.aux_input['food_idx'][graph_counter + j])\n",
+    "            start_index  = int(data_batch.ptr[j])\n",
+    "            nest_local   = nest_global - start_index\n",
+    "            food_local   = food_global - start_index\n",
+    "            dx, dy = (data_batch.pos[food_local] - data_batch.pos[nest_local]).cpu().numpy()\n",
+    "            angle_deg = (math.degrees(math.atan2(dy, dx)) + 360) % 360\n",
+    "            dir_id    = int((angle_deg + 22.5) // 45) % 8\n",
+    "            semantic_dirs.append(dir_id)\n",
+    "        graph_counter += graphs_in_batch\n",
+    "    true_directions = np.array(semantic_dirs)\n",
+    "    return true_directions, predicted_direction\n",
+    "\n",
+    "interactions = [\n",
+    "    (\"seed42\", bee_interaction_42),\n",
+    "    (\"seed27\", bee_interaction_27),\n",
+    "    (\"seed31\",  bee_interaction_31),\n",
+    "    (\"seed123\", bee_interaction_123),\n",
+    "    (\"seed2025\", bee_interaction_2025),\n",
+    "]\n",
+    "\n",
+    "num_seeds = len(interactions)\n",
+    "fig, axes = plt.subplots(nrows=num_seeds, ncols=2, figsize=(12, 4*num_seeds))\n",
+    "\n",
+    "for idx, (label, interaction_obj) in enumerate(interactions):\n",
+    "    # Distance subplot\n",
+    "    true_distances, distance_token = extract_distances(interaction_obj)\n",
+    "    true_log = true_distances\n",
+    "    token_log = distance_token\n",
+    "    rho, _ = spearmanr(true_log, token_log)\n",
+    "    ax_dist = axes[idx, 0]\n",
+    "    ax_dist.scatter(true_log, token_log, alpha=0.3)\n",
+    "    ax_dist.set_xlabel(\"True Distance\", fontsize=16)\n",
+    "    ax_dist.set_ylabel(\"Distance Token\", fontsize=16)\n",
+    "    ax_dist.set_title(f\"{label} (ρ={rho:.2f})\", fontsize=16)\n",
+    "\n",
+    "    # Direction subplot\n",
+    "    true_dirs, pred_dirs = extract_directions(interaction_obj)\n",
+    "    jitter = 0.1\n",
+    "    x = true_dirs + np.random.uniform(-jitter, jitter, size=true_dirs.shape)\n",
+    "    y = pred_dirs + np.random.uniform(-jitter, jitter, size=pred_dirs.shape)\n",
+    "    ax_dir = axes[idx, 1]\n",
+    "    ax_dir.scatter(x, y, alpha=0.3)\n",
+    "    ax_dir.set_xlabel(\"True Direction ID\", fontsize=16)\n",
+    "    ax_dir.set_ylabel(\"Predicted Direction ID\", fontsize=16)\n",
+    "    ax_dir.set_xticks(range(8))\n",
+    "    ax_dir.set_yticks(range(8))\n",
+    "    ax_dir.set_title(f\"{label}\", fontsize=16)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fbfe9bd",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ded4202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confusion_true_dirs, confusion_pred_dirs = extract_directions(bee_interaction_42)\n",
+    "accuracy = (confusion_pred_dirs  == confusion_true_dirs).mean()\n",
+    "print(f\"Direction accuracy = {accuracy*100:.1f}%\")\n",
+    "\n",
+    "# or confusion matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(confusion_true_dirs, confusion_pred_dirs , labels=range(8))\n",
+    "cm_norm = cm.astype(float) / cm.sum(axis=1, keepdims=True) * 100\n",
+    "print(\"Raw counts:\\n\", cm)\n",
+    "print(\"\\nRow‑normalized (%):\\n\", np.round(cm_norm, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc7adaac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [\"N\",\"NE\",\"E\",\"SE\",\"S\",\"SW\",\"W\",\"NW\"]\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "im = ax.imshow(cm_norm, interpolation='nearest', cmap='Blues')\n",
+    "\n",
+    "ax.set_xticks(np.arange(len(labels)))\n",
+    "ax.set_xticklabels(labels, rotation=45, ha=\"right\", fontsize=12)\n",
+    "ax.set_yticks(np.arange(len(labels)))\n",
+    "ax.set_yticklabels(labels, fontsize=12)\n",
+    "\n",
+    "for i in range(cm_norm.shape[0]):\n",
+    "    for j in range(cm_norm.shape[1]):\n",
+    "        text_color = \"white\" if cm[i, j] > 50 else \"black\"\n",
+    "        ax.text(j, i, f\"{cm_norm[i, j]:.1f}%\", ha=\"center\", va=\"center\",\n",
+    "                color=text_color, fontsize=10)\n",
+    "\n",
+    "cbar = fig.colorbar(im, ax=ax, fraction=0.046, pad=0.04)\n",
+    "cbar.ax.tick_params(labelsize=12)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f90728f",
+   "metadata": {},
+   "source": [
+    "## Compositionality"
    ]
   },
   {
@@ -655,7 +911,7 @@
    "id": "fe28579c",
    "metadata": {},
    "source": [
-    "# Distance Analysis"
+    "## Probing Distance"
    ]
   },
   {
@@ -665,29 +921,182 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = np.array(token_distances)\n",
-    "fig = plt.figure()\n",
-    "plt.hist(raw, bins=50)\n",
-    "plt.title(\"Histogram of raw token_distances\")\n",
-    "plt.xlabel(\"token_distance\")\n",
-    "plt.ylabel(\"count\")\n",
-    "plt.show()"
+    "import math\n",
+    "import numpy as np\n",
+    "from scipy.stats import spearmanr\n",
+    "import networkx as nx\n",
+    "import torch\n",
+    "\n",
+    "def probe_distance_token(interaction_obj, epsilon=1e-6):\n",
+    "    \"\"\"\n",
+    "    Returns a dict with Spearman correlations between the continuous distance\n",
+    "    token and three candidate graph metrics:\n",
+    "        * hop count\n",
+    "        * cumulative edge distance\n",
+    "        * log(cumulative edge distance)\n",
+    "    \"\"\"\n",
+    "    distance_token = interaction_obj.message[:, 8].cpu().numpy()\n",
+    "    hop_counts     = []\n",
+    "    path_costs     = []\n",
+    "\n",
+    "    global_index = 0\n",
+    "    data_batches  = interaction_obj.aux_input['data']\n",
+    "    nest_indices  = interaction_obj.aux_input['nest_idx']\n",
+    "    food_indices  = interaction_obj.aux_input['food_idx']\n",
+    "\n",
+    "    for batch in data_batches:\n",
+    "        graphs_in_batch = batch.ptr.size(0) - 1\n",
+    "\n",
+    "        num_nodes = batch.x.size(0)\n",
+    "        G = nx.Graph()\n",
+    "        G.add_nodes_from(range(num_nodes))\n",
+    "        edge_index = batch.edge_index.t().cpu().numpy() \n",
+    "        edge_dist  = batch.edge_attr[:, 0].cpu().numpy() \n",
+    "        for (u,v), w in zip(edge_index, edge_dist):\n",
+    "            G.add_edge(int(u), int(v), weight=float(w))\n",
+    "\n",
+    "        for g in range(graphs_in_batch):\n",
+    "            batch_start = int(batch.ptr[g])\n",
+    "            batch_end   = int(batch.ptr[g+1])\n",
+    "            sub_nodes = range(batch_start, batch_end)\n",
+    "\n",
+    "            nest_global = int(nest_indices[global_index + g])\n",
+    "            food_global = int(food_indices[global_index + g])\n",
+    "\n",
+    "            # Shortest-path in unweighted graph -> hop count\n",
+    "            hop_count = nx.shortest_path_length(G, source=nest_global,\n",
+    "                                                target=food_global)\n",
+    "\n",
+    "            # Shortest-path with edge weights -> path cost\n",
+    "            path      = nx.shortest_path(G, source=nest_global,\n",
+    "                                         target=food_global, weight='weight')\n",
+    "            cost = 0.0\n",
+    "            for u,v in zip(path[:-1], path[1:]):\n",
+    "                cost += G[u][v]['weight']\n",
+    "\n",
+    "            hop_counts.append(hop_count)\n",
+    "            path_costs.append(cost)\n",
+    "\n",
+    "        global_index += graphs_in_batch\n",
+    "\n",
+    "    hop_counts = np.array(hop_counts)\n",
+    "    path_costs = np.array(path_costs)\n",
+    "    log_costs  = np.log(path_costs + epsilon)\n",
+    "\n",
+    "    rho_hop,  _ = spearmanr(hop_counts, distance_token)\n",
+    "    rho_cost, _ = spearmanr(path_costs,  distance_token)\n",
+    "    rho_log,  _ = spearmanr(log_costs,   distance_token)\n",
+    "\n",
+    "    return {\n",
+    "        \"rho_hop\":  rho_hop,\n",
+    "        \"rho_cost\": rho_cost,\n",
+    "        \"rho_log_cost\": rho_log\n",
+    "    }\n",
+    "for label, obj in interactions:\n",
+    "    res = probe_distance_token(obj)\n",
+    "    print(f\"{label:7s} | ρ_hop = {res['rho_hop']:.3f}   \"\n",
+    "          f\"ρ_cost = {res['rho_cost']:.3f}   \"\n",
+    "          f\"ρ_log = {res['rho_log_cost']:.3f}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a514ed",
+   "id": "c2e82388",
    "metadata": {},
    "outputs": [],
    "source": [
-    "expd = np.exp(raw)\n",
-    "fig = plt.figure()\n",
-    "plt.hist(expd, bins=50)\n",
-    "plt.title(\"Histogram of exp(token_distances)\")\n",
-    "plt.xlabel(\"exp(token_distance)\")\n",
-    "plt.ylabel(\"count\")\n",
+    "def extract_graph_metrics(interaction_obj):\n",
+    "    \"\"\"Return hop_count, path_cost, log_path_cost, distance_token arrays (N,)\"\"\"\n",
+    "    distance_token = interaction_obj.message[:, 8].cpu().numpy()\n",
+    "\n",
+    "    hop_counts   = []\n",
+    "    path_lengths = []\n",
+    "\n",
+    "    global_counter = 0\n",
+    "    data_batches  = interaction_obj.aux_input['data']\n",
+    "    nest_idx      = interaction_obj.aux_input['nest_idx']\n",
+    "    food_idx      = interaction_obj.aux_input['food_idx']\n",
+    "\n",
+    "    for batch in data_batches:\n",
+    "        graphs_in_batch = batch.ptr.size(0) - 1\n",
+    "        num_nodes = batch.x.size(0)\n",
+    "        G = nx.Graph()\n",
+    "        G.add_nodes_from(range(num_nodes))\n",
+    "\n",
+    "        edge_index = batch.edge_index.t().cpu().numpy()\n",
+    "        edge_dist  = batch.edge_attr[:, 0].cpu().numpy()\n",
+    "        for (u,v), w in zip(edge_index, edge_dist):\n",
+    "            G.add_edge(int(u), int(v), weight=float(w))\n",
+    "\n",
+    "        for g in range(graphs_in_batch):\n",
+    "            nest_global = int(nest_idx[global_counter + g])\n",
+    "            food_global = int(food_idx[global_counter + g])\n",
+    "\n",
+    "            # Unweighted shortest path -> hop count\n",
+    "            hop_counts.append(nx.shortest_path_length(G, \n",
+    "                                                      source=nest_global, \n",
+    "                                                      target=food_global))\n",
+    "\n",
+    "            # Weighted shortest path -> cumulative distance\n",
+    "            path = nx.shortest_path(G, source=nest_global, \n",
+    "                                    target=food_global, weight='weight')\n",
+    "            cost = sum(G[u][v]['weight'] for u, v in zip(path[:-1], path[1:]))\n",
+    "            path_lengths.append(cost)\n",
+    "\n",
+    "        global_counter += graphs_in_batch\n",
+    "\n",
+    "    hop_counts   = np.array(hop_counts)\n",
+    "    path_lengths = np.array(path_lengths)\n",
+    "    log_lengths  = np.log(path_lengths + 1e-6)\n",
+    "\n",
+    "    return hop_counts, path_lengths, log_lengths, distance_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccbd0523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_seeds = len(interactions)\n",
+    "fig, axes = plt.subplots(nrows=num_seeds, ncols=3, figsize=(15, 4*num_seeds))\n",
+    "\n",
+    "for row, (label, inter) in enumerate(interactions):\n",
+    "    hop, cost, log_cost, token = extract_graph_metrics(inter)\n",
+    "\n",
+    "    rho_hop, _ = spearmanr(hop, token)\n",
+    "    ax = axes[row, 0]\n",
+    "    ax.scatter(hop, token, alpha=0.3)\n",
+    "    ax.set_xlabel(\"Hop Count\")\n",
+    "    ax.set_ylabel(\"Distance Token\")\n",
+    "    ax.set_title(f\"{label} (ρ={rho_hop:.2f})\")\n",
+    "\n",
+    "    rho_cost, _ = spearmanr(cost, token)\n",
+    "    ax = axes[row, 1]\n",
+    "    ax.scatter(cost, token, alpha=0.3)\n",
+    "    ax.set_xlabel(\"Cumulative Edge Distance\")\n",
+    "    ax.set_ylabel(\"Distance Token\")\n",
+    "    ax.set_title(f\"{label} (ρ={rho_cost:.2f})\")\n",
+    "\n",
+    "    rho_log, _ = spearmanr(log_cost, token)\n",
+    "    ax = axes[row, 2]\n",
+    "    ax.scatter(log_cost, token, alpha=0.3)\n",
+    "    ax.set_xlabel(\"log(Cumulative Edge Distance)\")\n",
+    "    ax.set_ylabel(\"Distance Token\")\n",
+    "    ax.set_title(f\"{label} (ρ={rho_log:.2f})\")\n",
+    "\n",
+    "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf53fcce",
+   "metadata": {},
+   "source": [
+    "The continuous slot is not bearing interpretable path‑distance meaning in our current setup which means agents rely almost entirely on the discrete direction symbol."
    ]
   },
   {
